# DataExplorer

./: .gitignore  README.md  build.bat
DataExplorer/: CodeEditor.cpp  DataExplorer.pro  DataExplorerDialog.cpp  DataExplorerDialog.h  PatternLanguage.h  PatternLanguage_x64.lib  PatternLanguage_x86.lib  PluginDialog.cpp  PluginDialog.h  PluginDialog.ui  PluginMainWindow.ui  QtPlugin.cpp  QtPlugin.h  pluginmain.cpp  pluginmain.h  resource.qrc
DataExplorer/pluginsdk/: x32bridge.lib  x32dbg.lib  x64bridge.lib  x64dbg.lib
PatternLanguage/: .gitignore  CMakeLists.txt  README.md  cmake.toml
PatternLanguage/src/: CMakeLists.txt  PatternLanguage.cpp  PatternLanguage.def  PatternLanguage.h  example.cpp  makelibs.bat
